# gvsoc-pulp

./: raptor.py
pulp/: CMakeLists.txt
pulp/chips/archytas/: archytas_A_tile.py  archytas_arch.py  archytas_core.py
pulp/chips/democritos/: democritos_A_tile.py  democritos_arch.py  democritos_board.py  democritos_core.py  democritos_soc.py
pulp/chips/raptor/: raptor_arch.py  raptor_board.py  raptor_soc.py
pulp/light_redmule/: light_redmule.cpp
pulp/pcm/: CMakeLists.txt  pcm.py
pulp/pcm/include/: pcm.hpp  pcm_hwpe_archi.hpp
pulp/pcm/src/: pcm.cpp  pcm_hwpe.cpp  pcm_hwpe_engine.cpp  pcm_hwpe_fsm.cpp  pcm_hwpe_streamer.cpp
